cmake_minimum_required(VERSION 3.24)
project(learn-stl-17-cookbook)

set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Release ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Debug ${CMAKE_SOURCE_DIR}/bin)

add_subdirectory(ch1/2)
add_subdirectory(ch1/3)
add_subdirectory(ch1/4)
add_subdirectory(ch1/5)
add_subdirectory(ch1/6)
add_subdirectory(ch1/7)
add_subdirectory(ch2/1)
add_subdirectory(ch2/3)
add_subdirectory(ch2/4)